Fix contact block z-index

--- a/content/themes/dude/sass/views/_contact.scss
+++ b/content/themes/dude/sass/views/_contact.scss
@@ -317,7 +317,7 @@ body {
                 top: 0;
                 left: 0;
                 background: transparent;
-                z-index: 9;
+                z-index: 22;
 
                 &:focus {
                   box-shadow: inset 0 0 0 5px $color-links;
